--- a/utils/optodeCntTable.html
+++ b/utils/optodeCntTable.html
@@ -23,7 +23,8 @@ table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
-  font-size: 10px;
+  height: 100%;
+  font-size: 11px;
   border-style: none none none none;
   border-width: thin;
 }
